# QTSofrware

./: CMakeLists.txt  CMakeUserPresets.json  README.md  USARTAss.sln
MySoftware/: CMakeLists.txt  Chart.cpp  Chart.h  MySoftware.cpp  MySoftware.h  MySoftware.ui  SerialInfo.cpp  SerialInfo.h  ThreadProcess.cpp  ThreadProcess.h  USARTAss.cpp  USARTAss.h  USARTAss.ui  main.cpp
USARTAss/: Chart.cpp  Chart.h  SerialInfo.cpp  SerialInfo.h  USARTAss.cpp  USARTAss.h  USARTAss.qrc  USARTAss.ui  USARTAss.vcxproj  USARTAss.vcxproj.filters  main.cpp
beforefile/: Chart.cpp  Chart.h  SerialInfo.h  USARTAss.cpp  USARTAss.h
